src/human_study/program_31/python_err_msg.txt
File "./seq2parse/human_study/program_31/original.py", line 3
    for i in range(k)
                     ^
SyntaxError: expected ':'
